2005-10-06:
	* src/options.c: make "tokens" an option which can also take a list of
	service names for which it should be enabled.
	* src/pam_krb5.5.in,src/pam_krb5.8.in: update section for "tokens".
	* src/pam_krb5.5.in: fix header text for "external" and "use_shmem".

2005-10-05:
	* configure.ac: prereq the version of autoconf which my development
	box has, to avoid possible AC_CONFIG_HEADER/AM_CONFIG_HEADER wackiness.
	* src/pam_krb5_storetmp.8.in: use the actual installation paths.
	* src/acct.c: list the actual result code in the debug message.

2005-10-05:
	clean up CVS version tags
	* README.winbind: clear up a couple of finer points.
	* src/Makefile.am,src/pam_krb5_storetmp.8.in: add a man page for the
	temp file helper.
	* pam_krb5.spec: list bindir and section 1 man page files in the files
	manifest.

2005-10-05:
	* src/session.c: suppress duplicate success messages.
	* src/stash.c: warn on shmem failures.

2005-10-05:
	* src/shmem.c: always detach from the segment, even in error cases.
	* src/stash.c: note when we manipulate shared memory when debugging.

2005-10-04:
	* configure.ac: oh right, enable AFS support on *-sun-* now.

2005-10-04:
	* src/options.c,src/pam_krb5.5.in,src/pam_krb5.8.in: add
	"ignore_unknown_upn" as an alias for the "ignore_unknown_principals",
	to match behavior of patch from Luke Howard.  Correct the option
	parsing code so that it matches the option named in the man pages.
	* src/acct.c,src/auth.c: Merge most of the rest of Luke's patch for
	changed behavior when this option is supplied.
	* configure.ac: set the default keytab path to "FILE:/etc/krb5.keytab",
	not just "/etc/krb5.keytab".
	* src/acct.c,src/auth.c,src/conv.c,src/harness.c,src/initopts.c,
	src/items.c,src/map.c,src/minikafs.c,src/noafs.c,src/options.c,
	src/password.c,src/prompter.c,src/session.c,src/shmem.c,src/sly.c,
	src/stash.c,src/tokens.c,src/userinfo.c,src/v4.c,src/v5.c: include
	<security/pam_appl.h> before every inclusion of <security/pam_modules.h>