@@ -5,8 +5,12 @@ else
 	libdir=/lib
 fi
 if test `id -un` = "nalin" ; then
-	echo "Going to configure with --enable-Werror!"
-	flags=--enable-Werror
+	flags="--enable-Werror"
+	CFLAGS=`rpm --eval '%{optflags}' 2> /dev/null`
+	if test -n "$CFLAGS" ; then
+		export CFLAGS
+	fi
+	echo "Going to configure with $flags!"
 	mandir=${TMPDIR:-/var/tmp}/autogen-man-tmp
 else
 	flags=
